# delta-rs

./: Cargo.toml  LICENSE.txt
crates/aws/src/: storage.rs
crates/core/: Cargo.toml
crates/core/src/delta_datafusion/: data_validation.rs  mod.rs  table_provider.rs
crates/core/src/delta_datafusion/cdf/: scan_utils.rs
crates/core/src/delta_datafusion/engine/: storage.rs
crates/core/src/delta_datafusion/table_provider/next/: mod.rs
crates/core/src/delta_datafusion/table_provider/next/scan/: exec.rs  mod.rs  replay.rs
crates/core/src/kernel/snapshot/: log_data.rs  mod.rs
crates/core/src/kernel/transaction/: mod.rs
crates/core/src/logstore/: mod.rs
crates/core/src/operations/: delete.rs  restore.rs  update.rs  vacuum.rs
crates/core/src/operations/merge/: mod.rs
crates/core/src/operations/write/: execution.rs  mod.rs  writer.rs
crates/core/src/protocol/: checkpoints.rs
crates/core/src/table/: mod.rs
crates/core/tests/: command_optimize.rs  command_restore.rs  integration_checkpoint.rs  integration_datafusion.rs
crates/core/tests/fs_common/: mod.rs
crates/delta-bench/: Cargo.toml
crates/hdfs/: Cargo.toml
crates/lakefs/src/: logstore.rs
python/: Cargo.toml
python/deltalake/: _internal.pyi  table.py
python/src/: datafusion.rs  deletion_vectors.rs  lib.rs
python/tests/: test_datafusion.py  test_table_read.py
