[package]
name = "delta-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
deltalake-core = { path = "../core", version = "0", features = ["datafusion", "cloud"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
rand = "0.8"
rand_chacha = "0.3"
chrono = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
sha2 = "0.10"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = { workspace = true }
